[package]
name = "runie-testing"
version.workspace = true
edition.workspace = true

[dependencies]
runie-core = { path = "../runie-core" }
runie-agent = { path = "../runie-agent" }
runie-provider = { path = "../runie-provider" }
anyhow.workspace = true
tokio.workspace = true
tempfile.workspace = true

[dev-dependencies]
