[package]
name = "runie-testing"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
runie-core.workspace = true
runie-agent.workspace = true
runie-provider.workspace = true
anyhow.workspace = true
tokio.workspace = true
tempfile.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
uuid.workspace = true
include_dir.workspace = true

[dev-dependencies]
