[package]
name = "runie-testing"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
provider = ["runie-provider/mock"]
agent = ["runie-agent"]

[dependencies]
runie-core.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["rt", "test-util"] }
tokio-util.workspace = true
tempfile.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
uuid.workspace = true
include_dir.workspace = true
regex.workspace = true
runie-provider = { workspace = true, optional = true }
runie-agent = { workspace = true, optional = true }

crossterm.workspace = true

[dev-dependencies]
