[package]
name = "runie-tui"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "runie"
path = "src/main.rs"

[[bin]]
name = "runie-print"
path = "src/print_main.rs"

[[bin]]
name = "runie-json"
path = "src/json_main.rs"

[dependencies]
runie-core.workspace = true
runie-agent.workspace = true
runie-provider.workspace = true
runie-protocol.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
opaline = "0.4"
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect = "5"
unicode-width.workspace = true
patch = "0.7"
base64.workspace = true
tempfile.workspace = true
reqwest.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dev-dependencies]
insta.workspace = true
runie-testing = { path = "../runie-testing" }
