[package]
name = "runie-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "runie"
path = "src/main.rs"

[dependencies]
runie-core.workspace = true
runie-util.workspace = true
supports-color.workspace = true
supports-hyperlinks.workspace = true
runie-agent.workspace = true
runie-provider.workspace = true
ratatui.workspace = true
crossterm.workspace = true
ansi_colours.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
futures.workspace = true
opaline = "0.4"
dirs.workspace = true
serde_json.workspace = true
syntect = "5"
unicode-width.workspace = true
base64.workspace = true
tui-markdown = "0.3.7"
tui-textarea = "0.7"
ractor.workspace = true
tracing-subscriber.workspace = true
crokey = "1.4.0"
parking_lot.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dev-dependencies]
insta.workspace = true
runie-testing = { path = "../runie-testing" }
