[package]
name = "runie-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "runie-tui"
path = "src/main.rs"

[dependencies]
runie-core.workspace = true
supports-color.workspace = true
supports-hyperlinks.workspace = true
runie-agent.workspace = true
runie-provider.workspace = true
ratatui.workspace = true
crossterm.workspace = true
ansi_colours.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
futures.workspace = true
opaline.workspace = true
dirs.workspace = true
serde_json.workspace = true
syntect.workspace = true
unicode-width.workspace = true
tui-markdown.workspace = true
crokey.workspace = true
parking_lot.workspace = true
human-panic.workspace = true
color-eyre.workspace = true
clap.workspace = true
throbber-widgets-tui = "0.11"
textwrap.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dev-dependencies]
insta.workspace = true
runie-testing = { path = "../runie-testing" }
