[package]
name = "runie"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "runie"
path = "src/lib.rs"

[dependencies]
# Error handling
thiserror.workspace = true
anyhow.workspace = true

# SWC for TypeScript parsing
swc_common.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_ast.workspace = true

# Utilities
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
toml.workspace = true
libloading.workspace = true

# CLI
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ctrlc.workspace = true

# Async runtime for file watching
tokio.workspace = true

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[features]
default = []
