[package]
name = "tidy-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tidy-core = { path = "../tidy-core" }
tidy-ai = { path = "../tidy-ai" }
tidy-tools = { path = "../tidy-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
