[package]
name = "tidy-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "tidy"

[[bin]]
name = "tidy"
path = "src/main.rs"

[[bin]]
name = "cargo-pantry"
path = "src/bin/cargo-pantry.rs"

[dependencies]
tidy-core = { path = "../tidy-core" }
tidy-ai = { path = "../tidy-ai" }
tidy-agent = { path = "../tidy-agent" }
tidy-tools = { path = "../tidy-tools" }
tidy-router = { path = "../tidy-router" }
tidy-orchestrator = { path = "../tidy-orchestrator" }
tidy-tui = { path = "../tidy-tui" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dirs = "5.0"
uuid = { workspace = true }
