[package]
name = "tidy-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tidy-core = { path = "../tidy-core" }
tidy-ai = { path = "../tidy-ai" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
